Improved performance test suite, added memory testing utils, still a bit left to do before this is ready to use.