@@ -7,18 +7,12 @@
 	</parent>
 
 	<properties>
-		<neo-version>1.9-SNAPSHOT</neo-version>
-		<neo-version-name>${neo-version}</neo-version-name>
-		<storage-folder>${basedir}/tarpit</storage-folder>
-		<jvm-memory>768M</jvm-memory>
-		<run-main-class>org.neo4j.bench.regression.main.Main</run-main-class>
-		<time-to-run />
-		<log-file>${project.build.directory}/perftest.log</log-file>
 	</properties>
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.neo4j</groupId>
 	<artifactId>neo4j-perftest-harness</artifactId>
+  <version>1.9-SNAPSHOT</version>
 
 	<dependencies>
 
@@ -26,6 +20,24 @@
       <groupId>org.reflections</groupId>
       <artifactId>reflections</artifactId>
       <version>0.9.8</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j</artifactId>
+      <version>1.9.M01</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-mapper-lgpl</artifactId>
+      <version>1.9.10</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.code.java-allocation-instrumenter</groupId>
+      <artifactId>java-allocation-instrumenter</artifactId>
+      <version>2.0</version>
     </dependency>
 
     <dependency>
@@ -38,77 +50,16 @@
       <artifactId>jackson-mapper-asl</artifactId>
       <version>1.8.5</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.1</version>
+    </dependency>
   </dependencies>
 
 	<build>
 		<plugins>
-			<plugin>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<version>1.6</version>
-				<configuration>
-					<target>
-						<!-- Needed for the ant "if" task -->
-						<taskdef resource="net/sf/antcontrib/antcontrib.properties"
-							classpathref="maven.plugin.classpath" />
-
-						<property name="classpath" refid="maven.runtime.classpath" />
-
-            <!-- Download data sets that we need -->
-            <if>
-              <not>
-                <available file="databases/cineasts" type="dir"/>
-              </not>
-              <then>
-                <get src="https://dl.dropbox.com/u/47132/cineasts.tar" dest="target/" />
-                <mkdir dir="databases"/>
-                <untar src="target/cineasts.tar" dest="databases/"/>
-              </then>
-            </if>
-
-            <echo>Done downloading databases, running tests.</echo>
-
-						<!-- Run performance tests -->
-						<exec executable="java" output="${log-file}" dir="${project.build.directory}"
-							failonerror="false" resultproperty="perftest-result">
-
-							<arg value="-Xmx${jvm-memory}" />
-							<arg value="-server" />
-							<arg value="-XX:+UseConcMarkSweepGC" />
-							<arg value="-classpath" />
-							<arg value="${classpath}" />
-							<arg value="${run-main-class}" />
-							<arg value="-threshold=${threshold}" />
-							<arg value="-neo4j-version=${neo-version-name}" />
-              <arg value="-build-url=${build-url}" />
-							<arg value="-tarToMail=${tarToMail}" />
-							<arg value="-chart-file=${chart-file}" />
-							<arg value="-ops-per-sec-file=${ops-per-sec-file}" />
-							<arg value="-time-to-run=${time-to-run}" />
-						</exec>
-
-						<if>
-							<not>
-								<equals arg1="${perftest-result}" arg2="0" />
-							</not>
-							<then>
-								<fail
-									message="Performance regression run failed, see output in ${log-file}"
-									status="${perftest-result}" />
-							</then>
-						</if>
-
-					</target>
-				</configuration>
-
-				<dependencies>
-					<dependency>
-						<groupId>ant-contrib</groupId>
-						<artifactId>ant-contrib</artifactId>
-						<version>20020829</version>
-					</dependency>
-				</dependencies>
-
-			</plugin>
 
 		</plugins>
 	</build>
